# haskell-dsci

./: .travis.yml  README.md  haskdsci.cabal  stack.yaml
app/: Main.hs
src/: .CF.hs.swp  CF.hs
src/Data/Science/: CF.hs
test/: .Spec.hs.swp  CFSpec.hs  CFUnitTests.hs  Spec.hs  TestMain.hs
