name:                haskdsci
version:             0.1.0.0
synopsis:            A data science library for Haskell
description:         Please see README.md
homepage:            http://github.com/atc-/haskdsci#readme
license:             GPL-3
license-file:        LICENSE
author:              Alex Collins
maintainer:          atc@akisystems.net
copyright:           2016 Alex Collins. All rights reserved
category:            DataMining
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Science.CF
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable haskdsci-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , containers
                     , parsec
                     , optparse-generic
                     , haskdsci
  default-language:    Haskell2010

test-suite haskdsci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestMain.hs
  build-depends:       base
                     , haskdsci
                     , containers
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atc-/haskdsci
